--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Primary Meta Tags -->
+<title>02Pictures — Photography Studio</title>
+<meta name="title" content="02Pictures — Photography Studio">
+<meta name="description" content="With almost 9 years experience in videography and photography, let us edit and make your videos in a professional way.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="02Pictures — Photography Studio">
+<meta property="og:description" content="With almost 9 years experience in videography and photography, let us edit and make your videos in a professional way.">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="02Pictures — Photography Studio">
+<meta property="twitter:description" content="With almost 9 years experience in videography and photography, let us edit and make your videos in a professional way.">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
     <title>02 pictures</title>
     <link rel="shortcut icon" href="/Assets/utilities/cool.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/Assets/css/style.css">
