added meta keywords to site

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <title>02Pictures — Photography Studio</title>
 <meta name="title" content="02Pictures — Photography Studio">
 <meta name="description" content="With almost 9 years experience in videography and photography, let us edit and make your videos in a professional way.">
+<meta name="keywords" content="02pictures, o2 pictures, o2pictures, photography studio in ota, o2, pictures o2">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
