added youtube thumnail

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
             <div class="vids">
                 <div class="videos">
                     <video class="portfolio_vids" controls>
-                        <source src="/Assets/utilities/PHATIAH 1min.mp4">
+                        <source src="https://youtu.be/kNxjZ_4vZ6w">
                     </video>
                     <p class="video-description">A tour of the performance of PHATIAH at MTN ATHF FESTIVAL in the capital of Rwanda, Kigali.</p>
                 </div>
