--- a/portfolio.html
+++ b/portfolio.html
@@ -44,9 +44,9 @@
         <div class="portfolio_content">
             <div class="vids">
                 <div class="videos">
-                    <video class="portfolio_vids" controls>
+                    <iframe class="portfolio_vids" controls>
                         <source src="https://youtu.be/kNxjZ_4vZ6w">
-                    </video>
+                    </iframe>
                     <p class="video-description">A tour of the performance of PHATIAH at MTN ATHF FESTIVAL in the capital of Rwanda, Kigali.</p>
                 </div>
 
