--- a/portfolio.html
+++ b/portfolio.html
@@ -51,9 +51,9 @@
                 </div>
 
                 <div class="videos">
-                    <video class="portfolio_vids" controls>
+                    <iframe class="portfolio_vids" controls>
                         <source src="/Assets/utilities/Slave Mill. (Short Movie) inspired by Damian Marley.mp4">
-                    </video>
+                    </iframe>
                     <p class="video-description">A short movie titled "Slave mill" inspired by Darmian Marley.</p>
                 </div>
             
