--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                     <div class="info">
                         <ul>
                             <li><a href="#!"><i class="fa fa-map-marker"></i>NO 9, Arowolo street, Abule-egba, Lagos State.</a></li>
-                            <li><a href="#!"><i class="fa fa-envelope"></i>info@example.com</a></li>
+                            <li><a href="#!"><i class="fa fa-envelope"></i>Oladipuposodimu@gmail.com</a></li>
                             <li><a href="#!"><i class="fa fa-phone"></i>+234-701-355-3159</a></li>
                             <li><a href="#!"><i class="fa fa-info"></i>Download Resume</a></li>
                         </ul>
