--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
         <h1>My <span>Portfolio</span></h1>
     </header>
     <section class="header">
-        <h1 >Welcome to my portfolio, here inludes my recent works with my skills in video editing, directing and photography. At 02 pictures we aim to bring a scent of truth to every project. Always keeping natural light as our main referent, Ola Sodimu manages to create an atmosphere full of nuances in which the unique essence of the story and his personal imagery merge elegantly. In this portfolio you'd find my most recent tour with an amazing and fast-rising artiste, PHATIAH, a very talented singer. Also a mini video directed by myself and my crew is included here also among others. Enjoy!!!</h1>
+        <h1 >Welcome to my portfolio, here includes my recent works with my skills in video editing, directing and photography. At 02 pictures we aim to bring a scent of truth to every project. Always keeping natural light as our main referent, Ola Sodimu manages to create an atmosphere full of nuances in which the unique essence of the story and his personal imagery merge elegantly. In this portfolio you'd find my most recent tour with an amazing and fast-rising artiste, PHATIAH, a very talented singer. Also a mini video directed by myself and my crew is included here also among others. Enjoy!!!</h1>
     </section>
     <section>
         <div class="portfolio_content">
