--- a/portfolio.html
+++ b/portfolio.html
@@ -44,9 +44,7 @@
         <div class="portfolio_content">
             <div class="vids">
                 <div class="videos">
-                    <iframe class="portfolio_vids" controls>
-                        <source src="https://youtu.be/kNxjZ_4vZ6w">
-                    </iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/kNxjZ_4vZ6w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="video-description">A tour of the performance of PHATIAH at MTN ATHF FESTIVAL in the capital of Rwanda, Kigali.</p>
                 </div>
                 <div class="videos">
