--- a/portfolio.html
+++ b/portfolio.html
@@ -48,9 +48,7 @@
                     <p class="video-description">A tour of the performance of PHATIAH at MTN ATHF FESTIVAL in the capital of Rwanda, Kigali.</p>
                 </div>
                 <div class="videos">
-                    <iframe class="portfolio_vids" controls>
-                        <source src="/Assets/utilities/Slave Mill. (Short Movie) inspired by Damian Marley.mp4">
-                    </iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/q2Yz-QoHFj8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="video-description">A short movie titled "Slave mill" inspired by Darmian Marley.</p>
                 </div>
     </section>
