--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
 <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
+<!-- <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://metatags.io/">
 <meta property="twitter:title" content="02Pictures — Photography Studio">
 <meta property="twitter:description" content="With almost 9 years experience in videography and photography, let us edit and make your videos in a professional way.">
@@ -43,9 +43,9 @@
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
-        </div>
+        </div> -->
 
-        <div class="nav-links">
+<!--         <div class="nav-links">
             <ul>
                 <li><a class="active" href="#">home</a></li>
                 <li><a href="/about.html">About</a></li>
@@ -55,7 +55,7 @@
                 <li><a href="/contact.html">contact</a></li>
             </ul>
         </div>
-    </nav> -->
+    </nav> --> -->
 
 <!--     <main id="hero-page">
         <div class="content">
