--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,23 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
-<!-- <title>02Pictures — Photography Studio</title>
+ <title>02Pictures — Photography Studio</title>
 <meta name="title" content="02Pictures — Photography Studio">
 <meta name="description" content="With almost 9 years experience in videography and photography, let us edit and make your videos in a professional way.">
 <meta name="keywords" content="02pictures, o2 pictures, o2pictures, photography studio in ota, o2, pictures o2">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="language" content="English"> -->
+<meta name="language" content="English"> 
 
 <!-- Open Graph / Facebook -->
-<!-- <meta property="og:type" content="website">
+<meta property="og:type" content="website">
 <meta property="og:url" content="https://metatags.io/">
 <meta property="og:title" content="02Pictures — Photography Studio">
 <meta property="og:description" content="With almost 9 years experience in videography and photography, let us edit and make your videos in a professional way.">
 <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
 <!-- Twitter -->
-<!-- <meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://metatags.io/">
 <meta property="twitter:title" content="02Pictures — Photography Studio">
 <meta property="twitter:description" content="With almost 9 years experience in videography and photography, let us edit and make your videos in a professional way.">
@@ -45,7 +45,7 @@
             <span class="bar"></span>
         </div> -->
 
-<!--         <div class="nav-links">
+         <div class="nav-links">
             <ul>
                 <li><a class="active" href="#">home</a></li>
                 <li><a href="/about.html">About</a></li>
@@ -55,9 +55,9 @@
                 <li><a href="/contact.html">contact</a></li>
             </ul>
         </div>
-    </nav> --> -->
+    </nav>
 
-<!--     <main id="hero-page">
+  <main id="hero-page">
         <div class="content">
             <h2>WELCOME TO 02 PICTURES</h2>
             <h1>LET ME MAKE YOUR <br>VIDEO LOOK <br>MORE UNIQUE</h1>
@@ -72,12 +72,11 @@
         <div class="hero-img">
             <img src="/Assets/utilities/02 pictures.jpg" alt="">
         </div>
-<!-- 
         <video autoplay loop id="video-background" muted plays-inline>
             <source src="/Assets/utilities/Pexels Videos 1321208.mp4"type="video/mp4">
-        </video> -->
+        </video>
     </main>
- -->
+ 
     <script src="/Assets/js/script.js"></script>
 </body>
-</html> -->
+</html> 
