--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="content">
             <h2>WELCOME TO 02 PICTURES</h2>
             <h1>LET ME MAKE YOUR <br>VIDEO LOOK <br>MORE UNIQUE</h1>
-            <p>Hi, My name is Oladipupo Sodimu alias "02". I am a cinematographer. <br>kindly click on the buttons below to learn more about me.</p>
+            <p>Hi, My name is Oladipupo Sodimu popularly known as "02". I am a cinematographer. <br>kindly click on the buttons below to learn more about me.</p>
 
             <div class="btn-container">
                 <a href="/services.html"><button class="hero-btn button">services</button></a>
