--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>About Me</title>
@@ -107,4 +107,4 @@
 
     <script src="/Assets/js/script.js"></script>
 </body>
-</html> -->
+</html>
